Some changes to steps view. Adding label on the progress bar.

--- a/src/application/StepsView.fxml
+++ b/src/application/StepsView.fxml
@@ -22,30 +22,36 @@
                <font>
                   <Font name="System Bold" size="58.0" />
                </font>
+               <StackPane.margin>
+                  <Insets />
+               </StackPane.margin>
+               <padding>
+                  <Insets left="40.0" />
+               </padding>
             </Label>
             <AnchorPane prefHeight="200.0" prefWidth="200.0">
                <children>
-                  <ImageView fx:id="stepsIcon" fitHeight="150.0" fitWidth="150.0" layoutX="70.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="stepsIcon" fitHeight="150.0" fitWidth="150.0" layoutX="95.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </AnchorPane>
          </children>
       </StackPane>
    </top>
    <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="280.0" prefWidth="481.0" BorderPane.alignment="CENTER">
          <children>
-            <StackPane prefHeight="150.0" prefWidth="200.0">
+            <StackPane prefHeight="120.0" prefWidth="200.0">
                <children>
-                  <Rectangle arcHeight="30.0" arcWidth="20.0" fill="#ff6459e8" height="66.0" stroke="WHITE" strokeLineCap="ROUND" strokeType="INSIDE" width="481.0">
+                  <Rectangle arcHeight="30.0" arcWidth="20.0" fill="#ff6459e8" height="66.0" stroke="WHITE" strokeLineCap="ROUND" strokeType="INSIDE" width="380.0">
                      <StackPane.margin>
-                        <Insets />
+                        <Insets top="-80.0" />
                      </StackPane.margin></Rectangle>
                   <Label prefHeight="46.0" prefWidth="390.0" text="LOG YOUR DAILY STEP COUNT" textAlignment="CENTER">
                      <font>
                         <Font name="Yu Gothic UI Regular" size="24.0" />
                      </font>
                      <StackPane.margin>
-                        <Insets left="50.0" />
+                        <Insets left="30.0" top="-80.0" />
                      </StackPane.margin>
                   </Label>
                </children>
@@ -54,7 +60,7 @@
                <children>
                   <Label text="Day of the month:" textFill="#ff6459">
                      <HBox.margin>
-                        <Insets left="50.0" />
+                        <Insets left="10.0" />
                      </HBox.margin>
                      <font>
                         <Font name="System Bold" size="15.0" />
@@ -69,12 +75,15 @@
                      </font>
                   </Label>
                </children>
+               <VBox.margin>
+                  <Insets top="-50.0" />
+               </VBox.margin>
             </HBox>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
                   <ChoiceBox fx:id="dayOfMonth" prefHeight="50.0" prefWidth="128.0">
                      <HBox.margin>
-                        <Insets left="50.0" />
+                        <Insets left="10.0" />
                      </HBox.margin>
                      <items>
             		<FXCollections fx:factory="observableArrayList">
@@ -117,7 +126,7 @@
                         <Font size="36.0" />
                      </font>
                      <HBox.margin>
-                        <Insets bottom="10.0" left="50.0" right="45.0" />
+                        <Insets bottom="10.0" left="50.0" right="30.0" />
                      </HBox.margin>
                   </Label>
                   <TextField fx:id="stepsTextField" alignment="CENTER" prefHeight="50.0" prefWidth="120.0">
@@ -132,7 +141,7 @@
                   <Insets />
                </opaqueInsets>
                <VBox.margin>
-                  <Insets bottom="40.0" left="50.0" />
+                  <Insets bottom="10.0" left="30.0" />
                </VBox.margin>
                <font>
                   <Font name="System Bold" size="30.0" />
@@ -140,12 +149,22 @@
                <effect>
                   <Blend />
                </effect></Button>
+            <StackPane prefHeight="150.0" prefWidth="200.0">
+               <children>
+                  <ProgressBar fx:id="stepsProgressBar" prefHeight="40.0" prefWidth="382.0" progress="0.0">
+                     <padding>
+                        <Insets left="20.0" right="3.0" top="-30.0" />
+                     </padding>
+                  </ProgressBar>
+                  <Label text="Your progress" />
+               </children>
+            </StackPane>
             <Label fx:id="stepsErrorLabel" prefHeight="21.0" prefWidth="395.0">
                <padding>
                   <Insets left="30.0" />
                </padding>
             </Label>
-            <Label fx:id="dayOfMonthErrorLabel" prefHeight="21.0" prefWidth="395.0" text="Label">
+            <Label fx:id="dayOfMonthErrorLabel" prefHeight="21.0" prefWidth="395.0">
                <padding>
                   <Insets left="30.0" />
                </padding>
@@ -172,11 +191,6 @@
                         <Insets left="130.0" />
                      </VBox.margin>
                   </Label>
-                  <ProgressBar fx:id="stepsProgressBar" prefHeight="100.0" prefWidth="354.0" progress="0.0">
-                     <VBox.margin>
-                        <Insets left="130.0" />
-                     </VBox.margin>
-                  </ProgressBar>
                   <HBox prefHeight="100.0" prefWidth="200.0">
                      <children>
                         <Button mnemonicParsing="false" onAction="#returnToMainPage" prefHeight="36.0" prefWidth="160.0" text="RETURN TO MAIN">
