--- a/src/application/NutritionTracker.fxml
+++ b/src/application/NutritionTracker.fxml
@@ -37,13 +37,21 @@
                <effect>
                   <DropShadow color="#00000080" />
                </effect></Button>
+               <Label fx:id="weightProgressLabel" layoutX="15.0" layoutY="-23.0" prefHeight="47.0" prefWidth="579.0" text="Comparison:">
+               <font>
+                  <Font size="19.0" />
+               </font>
+               <padding>
+                  <Insets left="30.0" />
+               </padding></Label>
          </children>
       </Pane>
    </bottom>
    <center>
       <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Button layoutX="23.0" layoutY="31.0" mnemonicParsing="false" onAction="#setCalorieIntake" prefHeight="43.0" prefWidth="281.0" style="-fx-background-radius: 10; -fx-background-color: ORANGE;" text="SET CALORIE INTAKE" textAlignment="CENTER" textFill="WHITE">
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="81.0" layoutX="321.0" layoutY="272.0" stroke="ORANGE" strokeType="INSIDE" strokeWidth="3.0" width="280.0" />
+            <Button layoutX="23.0" layoutY="22.0" mnemonicParsing="false" onAction="#setCalorieIntake" prefHeight="43.0" prefWidth="281.0" style="-fx-background-radius: 10; -fx-background-color: ORANGE;" text="SET CALORIE INTAKE" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
@@ -51,7 +59,7 @@
                   <DropShadow color="#00000080" />
                </effect>
             </Button>
-            <Button alignment="CENTER" layoutX="23.0" layoutY="469.0" mnemonicParsing="false" onAction="#compareWeight" prefHeight="39.0" prefWidth="283.0" style="-fx-background-color: ORANGE; -fx-background-radius: 10;" text="WEIGHT PROGRESS" textAlignment="CENTER" textFill="WHITE">
+            <Button alignment="CENTER" layoutX="22.0" layoutY="452.0" mnemonicParsing="false" onAction="#compareWeight" prefHeight="39.0" prefWidth="283.0" style="-fx-background-color: ORANGE; -fx-background-radius: 10;" text="WEIGHT PROGRESS" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
@@ -59,7 +67,7 @@
                   <DropShadow color="#00000080" />
                </effect>
             </Button>
-            <Button alignment="CENTER" layoutX="22.0" layoutY="316.0" mnemonicParsing="false" onAction="#updateServingRatio" prefHeight="39.0" prefWidth="283.0" style="-fx-background-radius: 10; -fx-background-color: ORANGE;" text="CALCULATE SERVING" textAlignment="CENTER" textFill="WHITE">
+            <Button alignment="CENTER" layoutX="22.0" layoutY="273.0" mnemonicParsing="false" onAction="#updateServingRatio" prefHeight="39.0" prefWidth="283.0" style="-fx-background-radius: 10; -fx-background-color: ORANGE;" text="UPDATE SERVING" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
@@ -67,22 +75,31 @@
                   <DropShadow color="#00000080" />
                </effect>
             </Button>
-            <Label layoutX="334.0" layoutY="14.0" prefHeight="27.0" prefWidth="212.0" text="Enter Calorie Intake:">
+            <Label layoutX="326.0" layoutY="-5.0" prefHeight="27.0" prefWidth="212.0" text="Enter Calorie Intake:">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font></Label>
-            <Label fx:id="CalorieIntakeDisplay" layoutX="4.0" layoutY="83.0" prefHeight="72.0" prefWidth="603.0" text="Calorie display:">
-               <font>
-                  <Font size="19.0" />
-               </font>
+            <Label fx:id="CalorieIntakeDisplay" layoutX="6.0" layoutY="76.0" prefHeight="54.0" prefWidth="596.0" text="Calorie display:" textFill="DARKBLUE">
                <padding>
                   <Insets left="20.0" />
-               </padding></Label>
-            <Label fx:id="servingRatioLabel" layoutX="325.0" layoutY="313.0" prefHeight="105.0" prefWidth="270.0" text="Serving Ratio:" />
-            <Label fx:id="userWeightLabel" layoutX="313.0" layoutY="454.0" prefHeight="47.0" prefWidth="420.0" text="Weight Progress:" />
-            <Label fx:id="bmiDisplayLabel" layoutX="326.0" layoutY="393.0" prefHeight="94.0" prefWidth="229.0" text="BMI display:" />
-            <TextField fx:id="CalorieIntake" layoutX="340.0" layoutY="53.0" prefHeight="30.0" prefWidth="162.0" />
-            <Button alignment="CENTER" layoutX="22.0" layoutY="418.0" mnemonicParsing="false" onAction="#calculateBMI" prefHeight="39.0" prefWidth="283.0" style="-fx-background-color: ORANGE; -fx-background-radius: 10;" text="CALCULATE BMI" textAlignment="CENTER" textFill="WHITE">
+               </padding>
+               <font>
+                  <Font size="19.0" />
+               </font></Label>
+            <Label fx:id="servingRatioLabel" layoutX="325.0" layoutY="273.0" prefHeight="78.0" prefWidth="272.0" text="Serving Ratio:">
+               <font>
+                  <Font size="19.0" />
+               </font></Label>
+            <Label fx:id="userWeightLabel" layoutX="321.0" layoutY="427.0" prefHeight="95.0" prefWidth="280.0" text="Weight Progress:">
+               <font>
+                  <Font size="19.0" />
+               </font></Label>
+            <Label fx:id="bmiDisplayLabel" layoutX="326.0" layoutY="375.0" prefHeight="58.0" prefWidth="273.0" text="BMI display:">
+               <font>
+                  <Font size="19.0" />
+               </font></Label>
+            <TextField fx:id="CalorieIntake" layoutX="339.0" layoutY="25.0" prefHeight="30.0" prefWidth="162.0" />
+            <Button alignment="CENTER" layoutX="22.0" layoutY="393.0" mnemonicParsing="false" onAction="#calculateBMI" prefHeight="39.0" prefWidth="283.0" style="-fx-background-color: ORANGE; -fx-background-radius: 10;" text="CALCULATE BMI" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
@@ -90,14 +107,23 @@
                   <DropShadow color="#00000080" />
                </effect>
             </Button>
-            <Label layoutX="16.0" layoutY="173.0" prefHeight="27.0" prefWidth="390.0" text="Enter amount of carbs in serving (g):" />
-            <Label layoutX="8.0" layoutY="271.0" prefHeight="27.0" prefWidth="381.0" text="Enter amount of protein in serving (g):" />
-            <Label layoutX="12.0" layoutY="219.0" prefHeight="27.0" prefWidth="397.0" text="Enter amount of fat in serving (g):" />
-            <TextField fx:id="carbsTextField" layoutX="325.0" layoutY="167.0" prefHeight="20.0" prefWidth="192.0" />
-            <TextField fx:id="fatTextField" layoutX="325.0" layoutY="213.0" prefHeight="10.0" prefWidth="192.0" />
-            <TextField fx:id="proteinTextField" layoutX="325.0" layoutY="265.0" prefHeight="10.0" prefWidth="192.0" />
-            <TextField fx:id="currentWeightTextField" layoutX="343.0" layoutY="513.0" prefHeight="39.0" prefWidth="157.0" />
-            <Button alignment="CENTER" layoutX="21.0" layoutY="516.0" mnemonicParsing="false" onAction="#setCurrentWeight" prefHeight="44.0" prefWidth="287.0" style="-fx-background-color: ORANGE; -fx-background-radius: 10;" text="SET CURRENT WEIGHT" textAlignment="CENTER" textFill="WHITE">
+            <Label layoutX="21.0" layoutY="142.0" prefHeight="27.0" prefWidth="390.0" text="Enter amount of carbs in serving (g):">
+               <font>
+                  <Font size="19.0" />
+               </font></Label>
+            <Label layoutX="15.0" layoutY="227.0" prefHeight="27.0" prefWidth="381.0" text="Enter amount of protein in serving (g):">
+               <font>
+                  <Font size="19.0" />
+               </font></Label>
+            <Label layoutX="23.0" layoutY="183.0" prefHeight="27.0" prefWidth="397.0" text="Enter amount of fat in serving (g):">
+               <font>
+                  <Font size="19.0" />
+               </font></Label>
+            <TextField fx:id="carbsTextField" layoutX="367.0" layoutY="136.0" prefHeight="20.0" prefWidth="192.0" />
+            <TextField fx:id="fatTextField" layoutX="367.0" layoutY="177.0" prefHeight="10.0" prefWidth="192.0" />
+            <TextField fx:id="proteinTextField" layoutX="367.0" layoutY="221.0" prefHeight="10.0" prefWidth="192.0" />
+            <TextField fx:id="currentWeightTextField" layoutX="343.0" layoutY="521.0" prefHeight="39.0" prefWidth="157.0" />
+            <Button alignment="CENTER" layoutX="21.0" layoutY="518.0" mnemonicParsing="false" onAction="#setCurrentWeight" prefHeight="44.0" prefWidth="287.0" style="-fx-background-color: ORANGE; -fx-background-radius: 10;" text="SET CURRENT WEIGHT" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
@@ -105,7 +131,7 @@
                   <DropShadow color="#00000080" />
                </effect>
             </Button>
-            <Button alignment="CENTER" layoutX="15.0" layoutY="365.0" mnemonicParsing="false" onAction="#calculateServingRatio" prefHeight="44.0" prefWidth="298.0" style="-fx-background-radius: 10; -fx-background-color: ORANGE;" text="CALCULATE SERVING RATIO" textAlignment="CENTER" textFill="WHITE">
+            <Button alignment="CENTER" layoutX="15.0" layoutY="331.0" mnemonicParsing="false" onAction="#calculateServingRatio" prefHeight="44.0" prefWidth="298.0" style="-fx-background-radius: 10; -fx-background-color: ORANGE;" text="CALCULATE SERVING RATIO" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
@@ -113,13 +139,6 @@
                   <DropShadow color="#00000080" />
                </effect>
             </Button>
-               <Label fx:id="weightProgressLabel" layoutX="3.0" layoutY="567.0" prefHeight="47.0" prefWidth="579.0" text="Comparison:">
-               <font>
-                  <Font size="18.0" />
-               </font>
-               <padding>
-                  <Insets left="30.0" />
-               </padding></Label>
             <Label fx:id="errorLabel" layoutX="171.0" layoutY="-17.0" textFill="RED" />
          </children>
       </Pane>
