Note and monthly goal for steps added.

--- a/src/application/StepsView.fxml
+++ b/src/application/StepsView.fxml
@@ -173,9 +173,14 @@
                      </font></Label>
                </children>
             </StackPane>
+            <Label fx:id="stepGoalLabel" prefHeight="40.0">
+               <VBox.margin>
+                  <Insets top="-50.0" />
+               </VBox.margin>
+            </Label>
             <Label fx:id="stepsErrorLabel" prefHeight="21.0" prefWidth="395.0">
                <padding>
-                  <Insets left="30.0" />
+                  <Insets left="30.0" top="5.0" />
                </padding>
             </Label>
             <Label fx:id="dayOfMonthErrorLabel" prefHeight="21.0" prefWidth="395.0">
