--- a/src/application/StepsView.fxml
+++ b/src/application/StepsView.fxml
@@ -178,15 +178,21 @@
                   <Insets top="-50.0" />
                </VBox.margin>
             </Label>
-            <Label fx:id="stepsErrorLabel" prefHeight="21.0" prefWidth="395.0">
+            <Label fx:id="stepsErrorLabel" prefHeight="21.0" prefWidth="395.0" textFill="RED">
                <padding>
                   <Insets left="30.0" top="5.0" />
                </padding>
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
             </Label>
-            <Label fx:id="dayOfMonthErrorLabel" prefHeight="21.0" prefWidth="395.0">
+            <Label fx:id="dayOfMonthErrorLabel" prefHeight="21.0" prefWidth="395.0" textFill="RED">
                <padding>
                   <Insets left="30.0" />
                </padding>
+               <font>
+                  <Font size="18.0" />
+               </font>
             </Label>
          </children>
       </VBox>
