--- a/src/application/StepsView.fxml
+++ b/src/application/StepsView.fxml
@@ -17,23 +17,28 @@
    <top>
       <StackPane prefHeight="212.0" prefWidth="609.0" BorderPane.alignment="CENTER">
          <children>
-            <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#47a0c6" height="159.0" stroke="#52d4ff" strokeLineCap="BUTT" strokeLineJoin="ROUND" strokeType="OUTSIDE" strokeWidth="2.0" width="481.0" />
-            <Label text="Steps" textFill="WHITE">
-               <font>
-                  <Font name="System Bold" size="58.0" />
-               </font>
+            <AnchorPane prefHeight="200.0" prefWidth="200.0" />
+            <Rectangle arcHeight="10.0" arcWidth="10.0" fill="#3e9acf" height="95.0" stroke="#3e9acf" strokeType="INSIDE" width="390.0">
+               <effect>
+                  <DropShadow color="#00000080" />
+               </effect>
+            </Rectangle>
+            <ImageView fx:id="stepsIcon" fitHeight="85.0" fitWidth="72.0" pickOnBounds="true" preserveRatio="true">
                <StackPane.margin>
-                  <Insets />
+                  <Insets right="250.0" />
                </StackPane.margin>
+            </ImageView>
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="233.0" prefWidth="517.0" text="STEPS" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="30.0" />
+               </font>
                <padding>
-                  <Insets left="70.0" />
+                  <Insets top="40.0" />
                </padding>
+               <StackPane.margin>
+                  <Insets bottom="40.0" />
+               </StackPane.margin>
             </Label>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0">
-               <children>
-                  <ImageView fx:id="stepsIcon" fitHeight="150.0" fitWidth="150.0" layoutX="120.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true" />
-               </children>
-            </AnchorPane>
          </children>
       </StackPane>
    </top>
@@ -42,13 +47,16 @@
          <children>
             <StackPane prefHeight="120.0" prefWidth="200.0">
                <children>
-                  <Rectangle arcHeight="30.0" arcWidth="20.0" fill="#ff6459e8" height="66.0" stroke="WHITE" strokeLineCap="ROUND" strokeType="INSIDE" width="380.0">
+                  <Rectangle arcHeight="30.0" arcWidth="20.0" fill="#3e9acfe8" height="66.0" stroke="WHITE" strokeLineCap="ROUND" strokeType="INSIDE" width="380.0">
                      <StackPane.margin>
                         <Insets top="-80.0" />
-                     </StackPane.margin></Rectangle>
-                  <Label prefHeight="46.0" prefWidth="390.0" text="LOG YOUR DAILY STEP COUNT" textAlignment="CENTER">
+                     </StackPane.margin>
+                     <effect>
+                        <DropShadow color="#00000080" />
+                     </effect></Rectangle>
+                  <Label prefHeight="46.0" prefWidth="390.0" text="LOG YOUR DAILY STEP COUNT" textAlignment="CENTER" textFill="WHITE">
                      <font>
-                        <Font name="Yu Gothic UI Bold" size="20.0" />
+                        <Font name="System Bold" size="20.0" />
                      </font>
                      <StackPane.margin>
                         <Insets left="35.0" top="-80.0" />
@@ -58,20 +66,20 @@
             </StackPane>
             <HBox prefHeight="10.0" prefWidth="200.0">
                <children>
-                  <Label text="Day of the month:" textFill="#ff6459">
+                  <Label text="Day of the month:">
                      <HBox.margin>
                         <Insets left="10.0" />
                      </HBox.margin>
                      <font>
-                        <Font name="System Bold" size="15.0" />
+                        <Font size="15.0" />
                      </font>
                   </Label>
-                  <Label text="Steps taken:" textFill="#ff6459">
+                  <Label text="Steps taken:">
                      <HBox.margin>
                         <Insets left="133.0" />
                      </HBox.margin>
                      <font>
-                        <Font name="System Bold" size="15.0" />
+                        <Font size="15.0" />
                      </font>
                   </Label>
                </children>
@@ -136,7 +144,7 @@
                   </TextField>
                </children>
             </HBox>
-            <Button mnemonicParsing="false" onAction="#updateStepsNumber" prefWidth="360.0" text="Update Daily Steps" textFill="#ff6459">
+            <Button mnemonicParsing="false" onAction="#updateStepsNumber" prefWidth="360.0" style="-fx-background-color: #3e9acf;" text="Update Daily Steps" textFill="WHITE">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
@@ -197,12 +205,19 @@
          <children>
             <VBox prefHeight="200.0" prefWidth="380.0">
                <children>
-                  <HBox prefHeight="100.0" prefWidth="200.0">
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#returnToMainPage" prefHeight="36.0" prefWidth="160.0" text="RETURN TO MAIN">
+                        <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#returnToMainPage" style="-fx-background-color: #3e9acf; -fx-background-radius: 5;" text="Return to home" textFill="WHITE">
+                           <effect>
+                              <DropShadow color="#00000080" />
+                           </effect>
+                           <font>
+                              <Font size="22.0" />
+                           </font>
                            <HBox.margin>
-                              <Insets left="100.0" right="20.0" top="40.0" />
-                           </HBox.margin></Button>
+                              <Insets />
+                           </HBox.margin>
+                        </Button>
                      </children>
                      <padding>
                         <Insets left="10.0" />
